<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?colorSecondaryVariant">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="424dp"
        android:layout_height="231dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_top2"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeWidth="1dp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="48dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/rubik"
        android:text="Martin Gruber"
        android:textColor="?colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_boxicon4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik"
            android:text="4"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="338dp"
        android:layout_height="230dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:hint="@string/regEmail"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dip"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:hint="@string/regPhone"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dip"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintTop_toBottomOf="@+id/newEmail"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/newAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:hint="@string/regAddress"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dip"
            android:paddingStart="20dp"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPhoneNumber"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/rounded_edittext"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="255dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_verified_user_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik"
            android:text="2"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>